--- a/frontend/src/Components/ProjectPage/mainpage.module.css
+++ b/frontend/src/Components/ProjectPage/mainpage.module.css
@@ -1,5 +1,3 @@
-
-
 :root{
     --font-source-three: 'Source Sans 3';
     --font-spline-sans: "Spline Sans Mono";
@@ -101,7 +99,6 @@
 
 .DashboardAndProjectsHolder{
     width: 83%;
-    border: 1px solid red;
     margin-left: 1%;
     margin-top: 1%;
     display: flex;
@@ -109,7 +106,11 @@
     justify-content: center;
     font-family: var(--font-spline-sans);
     font-size: large;
+    border-radius: 20px;
+    box-shadow: var(--box-shadow-auto);
+    border: 2px solid #E9D7D7;
 }
+
 
 
 
