--- a/frontend/src/Components/ProjectPage/project.module.css
+++ b/frontend/src/Components/ProjectPage/project.module.css
@@ -1,6 +1,34 @@
+:root{
+    --font-source-three: 'Source Sans 3';
+    --font-spline-sans: "Spline Sans Mono";
+    --box-shadow-auto: 20px 20px 60px #d9d9d9, -20px -20px 60px #ffffff;
+    
+}
 .projectContainer{
     width: 100%;
     height: 100%;
     padding: 0;
-    background-color: aquamarine;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+}
+
+.projectsAddsOn{
+    width: 98%;
+    height: 20%;
+    /* border:  1px solid black; */
+    margin-top: 2%;
+}
+.projectUserExperienceImprover, .projectTracker{
+    width: 100%;
+    height: 50%;
+    border: 1px solid #E9D7D7;
+    margin-bottom: 1%;
+}
+
+.projectUserExperienceImprover{
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
 }
