--- a/frontend/src/Components/ProjectPage/project.module.css
+++ b/frontend/src/Components/ProjectPage/project.module.css
@@ -6,29 +6,58 @@
 }
 .projectContainer{
     width: 100%;
-    height: 100%;
-    padding: 0;
+    height: 100vh;
     background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
 }
 
-.projectsAddsOn{
-    width: 98%;
-    height: 20%;
-    /* border:  1px solid black; */
-    margin-top: 2%;
-}
-.projectUserExperienceImprover, .projectTracker{
+.projectView{
     width: 100%;
-    height: 50%;
-    border: 1px solid #E9D7D7;
-    margin-bottom: 1%;
+    height: 6% !important;
+    border: 1px solid black;
+    background-color: white;
+    position:static;
+    top: 0;
+    display: flex;
 }
 
-.projectUserExperienceImprover{
+.projectViewContainer{
+    width: 100%;
+    height: 90%;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
+
+.projectViewContainer::-webkit-scrollbar{
+    display: none;
+}
+
+
+.listView, .kanban, .calender{
+    width: 15%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    cursor: pointer;
+}
+
+.currentView{
+    background-color: pink;
+}
+
+
+.projectDisplay{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
