--- a/frontend/src/Components/Views/Kanban/kanban.module.css
+++ b/frontend/src/Components/Views/Kanban/kanban.module.css
@@ -240,11 +240,92 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
 }
 
 .close{
     position: absolute;
     top: 10px;
     right: 10px;
+}
+
+
+.modalTaskName{
+    width: 90%;
+    height: 10%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.modalTaskName input{
+    width: 100%;
+    height: 100%;
+    font-family: var(--font-spline-sans);
+    font-weight: 900;
+    font-size: 24px;
+    border: none;
+    outline: none;
+}
+
+.modalTaskDescription{
+    width: 90%;
+    height: 10%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.modalTaskDescription input{
+    width: 100%;
+    height: 100%;
+    border: 3px solid #AF2BC1;
+    outline: none;
+    border-radius: 4px;
+    font-family: var(--font-spline-sans);
+    font-size: 16px;
+    font-weight: 700;
+    color: gray;
+    padding-left: 2%;
+}
+
+
+.taskModalPrir{
+    width: 90%;
+    height: 20%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    row-gap: 30px;
+    column-gap: 10px;
+    margin-top: 10%;
+}
+
+.itemGrids{
+    display: grid;
+    grid-template-columns: 0.5fr 1fr 2fr;
+    width: 100%;
+    /* border: 1px solid red; */
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+.itemGrids .status{
+    width: 90%;
+    height: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: red;
+    border-radius: 4px;
+    font-weight: bold;
+}
+
+.itemGrids .assignees{
+    width: 90%;
+    height: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(138, 232, 152);
+    border-radius: 4px;
+    font-weight: bold;
 }
