--- a/frontend/src/Styles/kanban.module.css
+++ b/frontend/src/Styles/kanban.module.css
@@ -314,7 +314,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: red;
     border-radius: 4px;
     font-weight: bold;
 }
@@ -330,3 +329,81 @@
     font-weight: bold;
 }
 
+.datesContainer{
+    display: flex;
+    flex-direction: row;
+}
+
+.datesContainer input{
+    font-family: var(--font-spline-sans);
+    color: black;
+    font-weight: 900;
+    border: none;
+    outline: none;
+}
+
+.customSelect {
+    /* Remove default appearance */
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  
+    /* Remove border, background, etc. */
+    border: none;
+    background: none;
+    padding: 0;
+    margin: 0;
+    outline: none;
+    box-shadow: none;
+  
+    /* Optional: add custom styles */
+    font-size: 1rem;
+    cursor: pointer;
+  
+    /* Remove arrow */
+    background-image: none;
+  
+    /* If you want, you can add your custom styles here */
+    color: #000;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+  }
+  
+  /* Optional: remove option styling (limited, but helps) */
+  .customSelect option {
+    background-color: rgb(132, 132, 131, 0.1);
+    color: black;
+  }
+  
+
+
+.toDo {
+    background-color: rgb(255, 166, 166);
+  }
+  
+  .inProgress {
+    background-color: rgb(96, 238, 106);
+  }
+  
+  .inReview {
+    background-color: rgb(255, 159, 233);
+  }
+  
+  .complete {
+    background-color: green;
+  }
+  
+  
+
+  .medium{
+    background-color: rgb(225, 243, 94);
+  }
+
+  .high{
+    background-color: rgb(224, 23, 23);
+  }
+
+  .normal{
+    background-color: rgb(10, 220, 17);
+  }
