--- a/frontend/src/Styles/mainpage.module.css
+++ b/frontend/src/Styles/mainpage.module.css
@@ -19,7 +19,7 @@
 
 /* Bar container header */
 .barContainer{
-    width: 14%;
+    width: 16%;
     height: 100vh;
     box-shadow: var(--box-shadow-auto);
     margin-left: 1%;
@@ -30,6 +30,11 @@
     flex-direction: column;
     align-items: center;
     font-family: var(--font-source-three);
+    overflow-y: scroll;
+}
+
+.barContainer::-webkit-scrollbar{
+    display: none;
 }
 
 .barContainerHeader h2{
@@ -191,4 +196,140 @@
     font-family: var(--font-spline-sans);
     font-size: 18px;
     margin-top: 10px;
+}
+
+
+
+/* Project Bar Part */
+.projectBar{
+    min-height: 47%;
+    width: 90%;
+    border: 1px solid gray;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    flex-direction: column;
+    border-radius: 12px;
+    position: relative;
+}
+
+.projectBarHeader{
+    width: 95%;
+    text-align: center;
+    font-weight: bold;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.projectSatusTracker{
+    width: 95%;
+    font-size: 12px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+}
+
+.projectTrack {
+    width: 70%;
+    height: 10px;
+    border-radius: 20px;
+    background-color: #cfe0eb; /* softer gray-blue */
+    overflow: hidden;
+    margin-right: 10px; /* gives space between bar and text */
+}
+  
+.InnerProjectTrack {
+    background-color: #a64bf4; /* vibrant purple */
+    height: 100%;
+    border-radius: 20px;
+    transition: width 0.4s ease-in-out;
+}
+  
+
+
+.assigness{
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    min-height: 60%;
+    margin-top: 20px;
+    overflow-y: scroll;
+}
+
+.assigness::-webkit-scrollbar{
+    display: none;
+}
+
+
+
+.assigneeContainer{
+    width: 99%;
+    min-height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.assigneeIcon{
+    width: 20%;
+    aspect-ratio: 1 / 1;
+    margin-left: 3px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(175, 43, 193, 0.251);
+    font-size: 20px;
+    font-weight: bolder;
+    
+}
+
+.assigneeEmail{
+    font-weight: bold;
+    font-size: 18px;
+    color: gray;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
+
+.assigneeDeleteIcon{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+
+.inviteUser{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    font-weight: bolder;
+    color:#9b9a9a;
+    font-size: 20px;
+    width: 90%;
+    border: 1px solid gainsboro;
+    border-radius: 20px;
+    min-height: 15%;
+}
+
+.deleteProjectContainer{
+    width: 90%;
+    height: 50px;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bolder;
+    text-transform: uppercase;
+    background-color: rgba(255, 129, 129, 0.36);
+    color: red;
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 10px;
 }
