--- a/frontend/src/Styles/Style.module.css
+++ b/frontend/src/Styles/Style.module.css
@@ -225,3 +225,50 @@ button{
     color: gray;
     cursor: pointer;
 }
+
+
+.createWorkspace{
+    width: 100%;
+    height: 100vh;
+    background: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.createWorkspaceForm{
+    width: 20%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    border-radius: 12px;
+}
+.createWorkspace input{
+    width:90%;
+    height: 14%;
+    border: none;
+    border-radius: 8px;
+    outline: none;
+    font-family:  "Spline Sans Mono";
+    text-align: center;
+    font-size: 20px;
+    border: 1px solid orchid;
+}
+
+.createWorkspaceForm button{
+    width: 90%;
+    height: 40px;
+    border-radius: 4px;
+}
+
+.createWorkspaceForm label{
+    font-family: "Spline sans mono";
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.createWorkspaceForm input::placeholder{
+    padding-left: 4px;
+}
