--- a/frontend/src/Styles/mainpage.module.css
+++ b/frontend/src/Styles/mainpage.module.css
@@ -187,6 +187,7 @@
     margin-left: 2%;
     border-radius: 12px;
     background-color: white;
+    border: 1px solid black;
 }
 
 .projectDetails{
@@ -242,6 +243,7 @@
     align-items: center;
     justify-content: center;
     color: #AF2BC1;
+    
 }
 
 .inviteUserToWorkspace{
@@ -303,5 +305,158 @@
     justify-content: space-between;
     padding: 0 1em;
     font-size: 1.2em;
+    font-family: var(--font-source-three);
+    text-transform: uppercase;
+    font-weight:700;
+    color: #848383;
+}
+
+.taskItems{
+    width: 96%;
+    height: 32%;
+    border: 1px solid black;
+    margin-left: 0.8em;
+    margin-top: 1em;
+    background-color: white;
+    border-radius: 4px;
+    box-sizing: border-box;
+    padding: 0.4em 1em;
+    cursor: pointer;
+}
+
+.tasksDetails{
+    width: 100%;
+    height: 70%;
+    border-bottom: 2px solid rgb(163, 163, 163);
+}
+
+.priority{
+    width: 70px;
+    height: 30px;
     font-family: var(--font-spline-sans);
+    font-weight: 700;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    background-color: #96ff86;
+    color: black;
+}
+
+.taskName{
+    margin-top: 1em;
+    font-family: var(--font-spline-sans);
+    font-size: 1.1em;
+    font-weight: 900;
+}
+
+.taskNote{
+    font-family: var(--font-source-three);
+    font-size: 1.2em;
+    color: #848383;
+    margin-top: 0.6em;
+    overflow-y: hidden;
+}
+
+
+
+
+/* Create Project Modal */
+
+.modalOverlay{
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.modalContainer{
+    width: 40%;
+    height:60%;
+    background-color: white;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.modalHeader{
+    font-size: 20px;
+    color: black;
+    font-family: var(--font-spline-sans);
+    font-weight: 900;
+}
+
+.provisions{
+    width: 90%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+}
+.provisions input{
+    width: 100%;
+    height: 70px;
+    box-sizing: border-box;
+    padding-left: 1em;
+    font-size: 1em;
+    font-family: var(--font-spline-sans);
+    border: 1px solid rgb(175, 43, 193, 0.6);
+    border-radius: 4px;
+    &:focus{
+        outline: none;
+        border: 3px solid #AF2BC1;
+    }
+}
+
+.provisions textarea{
+    width: 100%;
+    height: 50%;
+    border: 2px solid  rgb(175, 43, 193, 0.6);
+    border-radius: 0;
+    resize: none;
+    box-sizing: border-box;
+    margin-top: 1em;
+    padding-top: 1em;
+    padding-left: 1em;
+    font-size: 1em;
+    border-radius: 4px;
+    &:focus{
+        outline: none;
+        border: 3px solid #AF2BC1;
+    }
+}
+
+.modalButtons{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    height: 10%;
+}
+
+.createButton, .closeButton{
+    width: 40%;
+    height: 100%;
+    background-color: rgba(175, 43, 193, 0.11);
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: #AF2BC1;
+    font-family: var(--font-spline-sans);
+    font-size: 20px;
+    font-weight: 700;
+    &:hover{
+        color: #ffffff;
+        background: #AF2BC1;
+    }
 }
