--- a/frontend/src/Styles/kanban.module.css
+++ b/frontend/src/Styles/kanban.module.css
@@ -4,7 +4,6 @@
     --font-fira-sans: "Fira Sans"
 }
 
-
 .taskBoard{
     width: 25%;
     height: 98%;
@@ -76,34 +75,6 @@
     
 }
 
-.taskDates{
-    border-radius: 30px;
-    width: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    font-size: 13px;
-    font-weight: 900;
-    color: #848483;
-    box-shadow: var(--box-shadow);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.taskPriority{
-    width: 40%;
-    height: 100%;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    box-shadow: var(--box-shadow);
-    color: #848383;
-    font-weight: 900;
-
-}
 
 /* Modal Create Task */
 .overlay{
@@ -130,24 +101,170 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-
 }
 
 .displayer{
   width: 99%;
+  height: 10%;
   border-bottom: 1px solid black;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-left: 1em;
+  position: relative;
+  box-sizing: border-box;
+}
+.taskOwner{
+  font-family: var(--font-fira-sans);
+  font-size: 1.2em;
+  font-weight: 700;
+  color: #919191;
+}
+
+
+.Xf{
+  position: absolute;
+  top: 0.1em;
+  right: 0.2em;
+  &:hover{
+    background-color: #f5d5f9;  
+    cursor: pointer;
+    border-radius: 4px;
+  }
+}
+
+.taskNameAndDescription{
+  width: 100%;
+  height: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 0 0.6em;
+}
+
+.taskNameAndDescription input{
+  width: 100%;
+  height: 40%;
+  outline:  none;
+  padding-left: 1em;
+  box-sizing: border-box;
+  font-size: 20px;
+  border: 1px solid #AF2BC1;
+  border-radius: 4PX;
+  font-family: var(--font-spline-sans);
+  &::placeholder{
+    color: gray;
+    font-family: var(--font-fira-sans);
+  }
+  &:focus{
+    border: 3px solid #AF2BC1;
+  }
+}
+.taskNameAndDescription textarea{
+  width: 100%;
+  height: 56%;
+  resize: none;
+  border: 1px solid #AF2BC1;
+  box-sizing: border-box;
+  border-radius: 4PX;
+  padding-left: 1em;
+  padding-top: 1em;
+  font-size: 20px;
+  font-family: var(--font-spline-sans);
+  &:focus{
+    outline: none;
+    border: 3px solid #AF2BC1;
+  }
+  &::placeholder{
+    font-family: var(--font-fira-sans);
+  }
+}
+
+.datesPriorityAndStatus{
+  width: calc(100% - 1em);
+  height: 10%;
+  box-sizing: border-box;
+  border-radius: 4px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  padding: 0 1em;
+}
+
+
+.startDate, .endDate, .priorityCheck{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-evenly;
+  height: 100%;
+  font-family: var(--font-fira-sans);
+  font-size: 0.9em;
+}
+.startDate input[type="date"], .endDate input[type="date"]{
+  width: 90%;
+  height: 70%;
+  font-size: 1.2em;
+  font-weight: 700;
+  font-family: var(--font-fira-sans);
+  border: none;
+  outline: none;
+  color: #919191;
+}
+
+.startDate label, .endDate label, .priorityCheck label{
+  color: gray;
+  font-size: 1.4em;
+}
+
+.startDate input[type="date"]::-webkit-calendar-picker-indicator,
+.endDate input[type="date"]::-webkit-calendar-picker-indicator{
+  margin-right: 3em;
+  height: 1.8em;            /* size control */
+  width: 1.8em;
+}
+
+.assignessSelection{
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0 1em;
+}
+
+.frget{
+  width: 100%;
+  height: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.frget div{
+  background-color: rgb(175, 43, 193, 0.11);
+  width: 95%;
+  height: 50%;
+  border-radius: 12px;
+  font-family: var(--font-fira-sans);
+  font-size: 2em;
+  font-weight: 700;
+  color: #AF2BC1;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &:hover{
+    background-color: #AF2BC1;
+    color: white;
+    cursor: pointer;
+  }
 }
 
 .error{
-    color: red;
-    font-size: 20px;
+  color: red;
+  font-family: var(--font-fira-sans);
+  margin-bottom: 20px;
 }
-
-
 
 /* Task Modal */
 .modalOverlay{
@@ -191,7 +308,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 2em;
+    margin-top: 1em;
   }
 
   .taskNameAndStatus input{
@@ -221,11 +338,55 @@
     }
   }
 
+
+  
+  .startDate, .endDate, .priorityCheck{
+    width: calc(100% - 0.6em);
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-evenly;
+    height: 100%;
+    padding-left: 0.5em;
+    font-family: var(--font-fira-sans);
+    font-size: 0.9em;
+  }
+  .startDate input, .endDate input, .priorityCheck Select{
+    width: 90%;
+    height: 70%;
+    font-size: 1em;
+    font-weight: 400;
+    font-family: var(--font-fira-sans);
+    border: none;
+    outline: none;
+  }
+
+  .startDate input[type="date"]::-webkit-calendar-picker-indicator,
+  .endDate input[type="date"]::-webkit-calendar-picker-indicator{
+    margin-right: 3em;
+    height: 1.5em;            /* size control */
+    width: 1.5em;
+  }
+
+  .createTaskButton{
+    width: 100%;
+    height: 10%;
+    border: 1px solid red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .createTaskButton button{
+    width: 100%;
+    height: 100%;
+  }
+
+
   .dateDetailBox{
     border: 2px solid black;
     width: 90%;
     height: 30%;
-    margin-top: 3em;
+    margin-top: 1em;
     display: flex;
     flex-direction: column;
     border-radius: 12px;
@@ -350,7 +511,7 @@
     height: 100%;
     border-radius: 12px;
     background-color: rgb(175, 43, 193, 0.11);
-    display: flex;
+    display: grid;
     align-items: center;
     justify-content: center;
     color: #AF2BC1;
